2004-12-29  Julien Blache <jb@jblache.org>
	* tools/sane-find-scanner.c: Added a hint about switching the
	scanner on and connecting it to the computer before doing
	anything.

2004-12-26  Gerard Klaver <gerard at gkall dot hobby dot nl>

	* doc/descriptions-external/hpaio.desc join two lines so html
	  conversion possible
	  doc/descriptions-external/stv680.desc added two webcams with
	  different usb vid and pid 
	  
2004-12-26  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added several scanners.

2004-12-18  Karl Heinz Kremer <khk@khk.net>

	* backend/epson.c backend/epson_usb.c: Added USB IDs for
	  CX-3650 and CX-4600 and updated version number.

2004-12-15  Gerard Klaver <gerard at gkall dot hobby dot nl>

	* doc/descriptions-external/hpaio.desc stv680.desc 
	  Info new external backends
	  
2004-12-01  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan-scsi.c backend/snapscan-options.c:
	  Added quality calibration for Epson 2480 (implementd by Simon Munton)

2004-12-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx_devices.c: Disabled stop_scan command for Mustek
	  BearPaw 2448 TA Plus.

2004-12-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane-gphoto2.man doc/sane-microtek2.man: Fixed minor
	  glitches based on patch from Eric S. Raymond <esr@thyrsus.com>.
	* doc/descriptions/unsupported.desc: Added Benq 320p.

2004-12-04  Julien Blache <jb@jblache.org>
	* tools/hotplug/libsane.usermap: Added Epson Perfection 4870
	Photo, vendor 0x04b8 product 0x0128.

2004-12-01  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c: Applied fix for allocation of gamma tables
	  (thanks to Simon Munton)

2004-12-01  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* doc/descriptions/unsupported.desc: removed Epson Perfection 1270

2004-12-01  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.h backend/snapscan.c backend/snapscan-scsi.c 